--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,50 +1,60 @@
-<h1 mat-dialog-title>Add User</h1>
-<div mat-dialog-content>
-    <div>
-        <mat-form-field class="mr-16" appearance="outline">
-            <mat-label>First Name</mat-label>
-            <input [(ngModel)]="user.firstName" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a name</mat-hint> -->
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Last Name</mat-label>
-            <input [(ngModel)]="user.lastName" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a name</mat-hint> -->
-        </mat-form-field>
-    </div>
-    <div>
-        <mat-form-field appearance="outline" class="full-width">
-            <mat-label>Birth Date</mat-label>
-            <input [(ngModel)]="birthdate" matInput placeholder="Placeholder" [matDatepicker]="picker1">
-            <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-            <mat-datepicker #picker1></mat-datepicker>
-            <!-- <mat-hint>Please enter a date</mat-hint> -->
-        </mat-form-field> 
-    </div>
+<div class="dialog-container">
+    <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+    <h1 mat-dialog-title>Add User</h1>
+    <div mat-dialog-content>
+        <div>
+            <mat-form-field class="mr-16" appearance="outline">
+                <mat-label>First Name</mat-label>
+                <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="First Name">
+                <!-- <mat-hint>Please enter a name</mat-hint> -->
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Last Name</mat-label>
+                <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Last Name">
+                <!-- <mat-hint>Please enter a name</mat-hint> -->
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label>E-Mail</mat-label>
+                <input [disabled]="loading" [(ngModel)]="user.email" matInput placeholder="E-Mail">
+                <!-- <mat-hint>Please enter a name</mat-hint> -->
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Birth Date</mat-label>
+                <input [disabled]="loading" [(ngModel)]="birthdate" matInput placeholder="Birth Date" [matDatepicker]="picker1">
+                <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+                <mat-datepicker #picker1></mat-datepicker>
+                <!-- <mat-hint>Please enter a date</mat-hint> -->
+            </mat-form-field>
+        </div>
 
-    <div>
-        <mat-form-field appearance="outline" class="full-width">
-            <mat-label>Street + House No.</mat-label>
-            <input [(ngModel)]="user.street" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a date</mat-hint> -->
-        </mat-form-field>
-    </div>
+        <div>
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Street + House No.</mat-label>
+                <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="Street No.">
+                <!-- <mat-hint>Please enter a date</mat-hint> -->
+            </mat-form-field>
+        </div>
 
-    <div>
-        <mat-form-field appearance="outline" class="mr-16">
-            <mat-label>Zip code</mat-label>
-            <input [(ngModel)]="user.zipCode" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a date</mat-hint> -->
-        </mat-form-field>
+        <div>
+            <mat-form-field appearance="outline" class="mr-16">
+                <mat-label>Zip code</mat-label>
+                <input [disabled]="loading" [(ngModel)]="user.zipCode" matInput placeholder="Zip Code">
+                <!-- <mat-hint>Please enter a date</mat-hint> -->
+            </mat-form-field>
 
-        <mat-form-field appearance="outline">
-            <mat-label>city</mat-label>
-            <input [(ngModel)]="user.city" matInput placeholder="Placeholder">
-            <!-- <mat-hint>Please enter a date</mat-hint> -->
-        </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>city</mat-label>
+                <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="City">
+                <!-- <mat-hint>Please enter a date</mat-hint> -->
+            </mat-form-field>
+        </div>
     </div>
-</div>
-<div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Cancel</button>
-    <button mat-button (click)="saveUser()" cdkFocusInitial>Save</button>
+    <div mat-dialog-actions>
+        <button [disabled]="loading" mat-button (click)="dialogRef.close()">Cancel</button>
+        <button [disabled]="loading" mat-button (click)="saveUser()" cdkFocusInitial>Save</button>
+    </div>
 </div>
