--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,5 +1,62 @@
-.add-user-btn{
+.add-user-btn {
     position: absolute;
     right: 56px;
     bottom: 56px;
+}
+
+mat-card{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.mat-mdc-card-content{
+    padding: 0;
+}
+
+.user-table {
+    width: 100%;
+    border-collapse: collapse;
+
+    tr{
+        border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+        cursor: pointer;
+
+        &:last-child {
+            border-bottom: 0;
+        }
+
+        &:first-child{
+            cursor: unset;
+            &:hover{
+                background-color: unset;
+            }
+        }
+
+        td{
+            height: 48px;
+
+            &:first-child{
+                padding-left: 16px;
+            }
+        }
+
+        th{
+            &:first-child{
+                padding-left: 16px;
+            }
+        }
+
+        &:hover{
+            background-color: rgba(0,0,0,0.2);
+        }
+    }
+
+ 
+
+    th {
+        color: rgba(0, 0, 0, 0.4);
+        font-size: 14px;
+        font-weight: 500;
+        text-align: start;
+    }
 }
